--- a/views/AuthController/login.html
+++ b/views/AuthController/login.html
@@ -1,45 +1,98 @@
 {{define "head"}}
     <style>
-        #login-panel {
-            margin-top: 40px;
+        
+        .logo{
+            width: 238px;
+            height: 44px;
         }
+
     </style>
     <title></title>
 {{end}}
 {{define "body"}}
 
-<div class="container-fluid" id="login-panel">
+
+
+<div class="container-fluid">
     <div class="row">
-        <div class="col text-center">
-            <form action="/login" method="POST">
-                <div class="form-group">
-                    <label  for="input-username">Username</label>
-                    <input class="form-control" type="text" name="username" id="input-username" placeholder="Enter email address">
-                </div>
-                <div class="form-group">
-                    <label for="input-password">Password</label>
-                    <input class="form-control" type="password" name="password" id="input-password" placeholder="Enter password">
-                </div>
-                <button type="submit" class="btn btn-outline-secondary btn-sm">Sign In</button>
-            </form>
+        <div class="col-sm" align="center">
+            <img class="logo" src="/images/safe_stop_logo.png">
         </div>
     </div>
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/register">Not a member? Register</a>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="lead" align="center">
+                Please sign in
+            </div>
         </div>
     </div>
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/forgot_password">Forgot Password</a>
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="form-group">
+                <input id="email" class="form-control" name="user[email]" type="text" placeholder="<%= t('email', locale: current_locale) %>">
+            </div>
+            <div class="form-group">
+                <input class="form-control" name="user[password]" type="password" placeholder="<%= t('password_case_sensitive', locale: current_locale) %>">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-safestop btn-block" type="submit"><%= t('sign_in', locale: current_locale) %></button>
+            </div>
         </div>
     </div>
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/">Return to home</a>
+    <div class="row">
+        <div class="col-sm-12" align="center">
+            <a href="/check_availability" class="btn btn-default btn-block"><%= t('create_an_account', locale: current_locale) %></a>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12" align="center" style="padding-top: 15px;">
+            <a href="/forgot_password?out_action=web"><%= t('forgot_password', locale: current_locale) %></a>
+        </div>
+    </div>
+
+
+    {{if .ViewData.IsUS}}
+            IS USdfdfd
+
+        <div class="row">
+            <div class="col-sm text-center" style="padding-top: 30px;">
+          <span id="login_help_number">
+          <%= t('ss_client_login_5', locale: current_locale) %>
+          <a href="tel://{{ .ViewData.SupportNumber }}" class='text'>{{ .ViewData.SupportNumber }}</a>
+          </span>
+            </div>
+        </div>
+
+    {{end}}
+
+
+
+    <div class="row">
+        <div class="col-md-12 text-center">
+  <span id="login_help_number">
+<% if ENV['SS_DOMAIN'] == 'safestopapp.com' %>
+    <%= t('ss_client_login_6', locale: current_locale) %>
+
+    <% else %>
+            <%= t('ss_client_login_6_ca', locale: current_locale) %>
+    <% end %>
+    <a href='mailto:support@{{ .ViewData.Domain}}'>support@{{ .ViewData.Domain }}</a>
+  </span>
+        </div>
+    </div>
+
+    <div class="row" id="add-to-home-screen" style="display: none; text-align: center; padding-top: 10px;">
+        <%= t('ss_client_login_7', locale: current_locale) %>
     </div>
 </div>
+
+
+
+
+
+
+
+
 
 
 {{end}}
