--- a/views/AppController/index.html
+++ b/views/AppController/index.html
@@ -1,5 +1,5 @@
 {{define "head"}}
-    <title></title>
+    <title>{{ t "fr" "french" "Default1" }} | {{ t "en" "french" "Default1" }}</title>
 {{end}}
 {{define "body"}}
 
