--- a/views/layouts/app.html
+++ b/views/layouts/app.html
@@ -7,101 +7,29 @@
     <link rel="stylesheet" href="/stylesheets/app-layout.css" type="text/css" />
     {{template "head" .}}
 </head>
-<body style="margin-top: 55px; margin-bottom: 60px; padding-bottom: 10px;">
+<body id="body" class="app-body">
 
-        
-    <div id='wrap'>
-    {{template "body" .}}
-    </div>
+<div id="overlay"
+     style="
+     position:absolute;
+         height:100%;
+         width:100%;
+         background:black;
+         opacity:.7;
+         z-index:2;
+         display:none;
+     ">
+</div>
 
-</body>
-</html>
-{{end}}
+<div id="top-bar" style="background: #ffffff;
+    z-index: 5000;
+    position: fixed;
+    width:100%;
+    top: 0px;
+    border-bottom: 1px solid #ccc;
+    height:50px;">
 
-
-        {{/**/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="57x57" href="<%= asset_path("favicomatic/apple-touch-icon-57x57.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="114x114" href="<%= asset_path("favicomatic/apple-touch-icon-114x114.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="72x72" href="<%= asset_path("favicomatic/apple-touch-icon-72x72.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="144x144" href="<%= asset_path("favicomatic/apple-touch-icon-144x144.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="60x60" href="<%= asset_path("favicomatic/apple-touch-icon-60x60.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="120x120" href="<%= asset_path("favicomatic/apple-touch-icon-120x120.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="76x76" href="<%= asset_path("favicomatic/apple-touch-icon-76x76.png") %>"/>*/}}
-    {{/*<link rel="apple-touch-icon-precomposed" sizes="152x152" href="<%= asset_path("favicomatic/apple-touch-icon-152x152.png") %>"/>*/}}
-    {{/*<link rel="icon" type="image/png" href="<%= asset_path("favicomatic/favicon-196x196.png") %>" sizes="196x196"/>*/}}
-    {{/*<link rel="icon" type="image/png" href="<%= asset_path("favicomatic/favicon-96x96.png") %>" sizes="96x96"/>*/}}
-    {{/*<link rel="icon" type="image/png" href="<%= asset_path("favicomatic/favicon-32x32.png") %>" sizes="32x32"/>*/}}
-    {{/*<link rel="icon" type="image/png" href="<%= asset_path("favicomatic/favicon-16x16.png") %>" sizes="16x16"/>*/}}
-    {{/*<link rel="icon" type="image/png" href="<%= asset_path("favicomatic/favicon-128.png") %>" sizes="128x128"/>*/}}
-    {{/*<meta http-equiv="Content-Type" content="text/html; charset=utf-8">*/}}
-
-    {{/*<meta name="apple-mobile-web-app-capable" content="yes">*/}}
-    {{/*<meta name="mobile-web-app-capable" content="yes">*/}}
-
-
-    {{/*<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">*/}}
-    {{/*<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">*/}}
-    {{/*<script src="https://use.fortawesome.com/2b5ad341.js"></script>*/}}
-
-    {{/*<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>*/}}
-    {{/*<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>*/}}
-    {{/*<script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>*/}}
-    {{/*<script src="//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js"></script>*/}}
-
-
-    {{/*<script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>*/}}
-
-    {{/*<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>*/}}
-
-
-    {{/*<%= javascript_include_tag 'formValidation.min' %>*/}}
-    {{/*<%= javascript_include_tag 'formValidation-bootstrap.min' %>*/}}
-    {{/*<%= stylesheet_link_tag 'formValidation.min', media: 'all', 'data-turbolinks-track' => true %>*/}}
-
-
-
-    {{/*<%= stylesheet_link_tag 'sweetalert' %>*/}}
-    {{/*<%= javascript_include_tag 'sweetalert.min' %>*/}}
-
-
-    {{/*<%= javascript_include_tag 'safe_stop_global', 'data-turbolinks-track' => false %>*/}}
-
-    {{/*<%= stylesheet_link_tag 'safe_stop_client', media: 'all', 'data-turbolinks-track' => true %>*/}}
-    {{/*<%= javascript_include_tag 'safe_stop_client' 'data-turbolinks-track' => true %>*/}}
-
-    {{/*<%= javascript_include_tag 'safe_stop_client_global', 'data-turbolinks-track' => true %>*/}}
-
-
-
-    {{/*<%= csrf_meta_tags %>*/}}
-
-
-    {{/*<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">*/}}
-
-
-{{/*</head>*/}}
-{{/*<body id="body" class="app-body" data-no-turbolink>*/}}
-
-{{/*<div id="overlay"*/}}
-     {{/*style="*/}}
-     {{/*position:absolute;*/}}
-         {{/*height:100%;*/}}
-         {{/*width:100%;*/}}
-         {{/*background:black;*/}}
-         {{/*opacity:.7;*/}}
-         {{/*z-index:2;*/}}
-         {{/*display:none;*/}}
-     {{/*"></div>*/}}
-
-{{/*<div id="top-bar" style="background: #ffffff;*/}}
-    {{/*z-index: 5000;*/}}
-    {{/*position: fixed;*/}}
-    {{/*width:100%;*/}}
-    {{/*top: 0px;*/}}
-    {{/*border-bottom: 1px solid #ccc;*/}}
-    {{/*height:50px;">*/}}
-
-    {{/*<table style="width:100%; height: 50px; z-index: 5000;">*/}}
+{{/*<table style="width:100%; height: 50px; z-index: 5000;">*/}}
         {{/*<tr>*/}}
             {{/*<td style="width: 40px; height:50px; padding-top: 4px;">*/}}
 
@@ -181,115 +109,119 @@
         {{/*</tr>*/}}
         {{/*<% end %>*/}}
     {{/*</table>*/}}
-{{/*</div>*/}}
+
+</div>
 
 
 {{/*<% flash.each do |type, message| %>*/}}
 {{/*<div class="alert <%= bootstrap_class_for(type) %> fade in">*/}}
-    {{/*<button class="close" data-dismiss="alert">×</button>*/}}
-    {{/*<%= message %>*/}}
+{{/*<button class="close" data-dismiss="alert">×</button>*/}}
+{{/*<%= message %>*/}}
 {{/*</div>*/}}
 {{/*<% end %>*/}}
 
-{{/*<%= yield %>*/}}
+{{template "body" .}}
 
-{{/*<div id="bottom-bar" style="position: fixed;*/}}
-    {{/*bottom: 0px;*/}}
-    {{/*min-height: 56px;*/}}
-    {{/*width:100%;*/}}
-    {{/*background:#ECECEC;*/}}
-    {{/*z-index: 5000;">*/}}
+
+<div id="bottom-bar" style="position: fixed;
+bottom: 0px;
+min-height: 56px;
+width:100%;
+background:#ECECEC;
+z-index: 5000;">
     {{/*<% if (request.fullpath.include?('/my_stops') || request.fullpath.starts_with?('/map_view') || request.fullpath == '/web' || request.fullpath == "/my_stops") %>*/}}
     {{/*<div id="ad" style="background-color: whitesmoke; text-align: center;">*/}}
-        {{/*<a id="ad-link" href="#" style="border: 0px;"><img id="ad-image" src=""></a>*/}}
+    {{/*<a id="ad-link" href="#" style="border: 0px;"><img id="ad-image" src=""></a>*/}}
     {{/*</div>*/}}
     {{/*<% end %>*/}}
-    {{/*<table style="min-height: 56px; width:100%; border-top:1px solid #ccc;">*/}}
-        {{/*<tr>*/}}
-            {{/*<td style="vertical-align: middle; border-right:1px solid #ccc; height: 56px; width:56px;" align="center">*/}}
-                {{/*<i class="ss ss-logo"  style="font-size: 30pt; color: #A12130;" aria-hidden="true"></i>*/}}
-                {{/*<% image_tag("safestop-icon-512.png", alt: "SafeStop", style: "height:40px;") %>*/}}
-            {{/*</td>*/}}
-            {{/*<td id="bottom-bar-center-td" style="vertical-align: middle;*/}}
-          {{/*height: 56px;*/}}
-          {{/*text-align: center;*/}}
-          {{/*<% if request.fullpath.starts_with?('/map_view') %>*/}}
-          {{/*cursor: pointer;*/}}
-          {{/*<% end %>*/}}
-          {{/*background: #ffffff;"*/}}
-                {{/*data-toggle="collapse"*/}}
-                {{/*data-target="#run-data"*/}}
-                {{/*align="center">*/}}
+    <table style="min-height: 56px; width:100%; border-top:1px solid #ccc;">
+        <tr>
+            <td style="vertical-align: middle; border-right:1px solid #ccc; height: 56px; width:56px;" align="center">
+            <i class="ss ss-logo"  style="font-size: 30pt; color: #A12130;" aria-hidden="true"></i>
+            <img src="/images/safestop-icon-512.png" alt="SafeStop" style="height:40px;">
+            </td>
 
-                {{/*<% if request.fullpath.starts_with?('/map_view') %>*/}}
-
-                {{/*<div class="container-fluid" style="margin:0px; padding: 0px;">*/}}
-                    {{/*<div class="row">*/}}
-                        {{/*<div class="col-xs-12" align="center" style="padding:0px;">*/}}
-                            {{/*<div style="display: inline-block" align="left">*/}}
-                                {{/*<table cellpadding="0">*/}}
-                                    {{/*<tr class="scheduled-data">*/}}
-                                        {{/*<td id="bottom-bar-scheduled" style="font-size: 15pt;"></td>*/}}
-                                    {{/*</tr>*/}}
-                                    {{/*<tr class="expected-data">*/}}
-                                        {{/*<td class="expected" style="font-size: 15pt;"></td>*/}}
-                                    {{/*</tr>*/}}
-                                    {{/*<tr class="expected-data">*/}}
-                                        {{/*<td id="bottom-bar-as-of" class="as_of" align="center" style="padding: 0px;"></td>*/}}
-                                    {{/*</tr>*/}}
-                                    {{/*<tr>*/}}
-                                        {{/*<td style="font-size: 8pt;" align="center">*/}}
-                                            {{/*<i class="fa fa-chevron-down"  style="padding:0px;" aria-hidden="true"></i>*/}}
-                                        {{/*</td>*/}}
-                                    {{/*</tr>*/}}
-                                {{/*</table>*/}}
-                            {{/*</div>*/}}
-                        {{/*</div>*/}}
-                    {{/*</div>*/}}
-                {{/*</div>*/}}
-
-                {{/*<% end %>*/}}
-
-                {{/*<% if  request.fullpath.include?('/my_stops') || request.fullpath == '/web' %>*/}}
-
-                {{/*<% if [Sti::LICENSE_5, Sti::SUB_ACCOUNT_USER].include?(@user.client_permission_group) %>*/}}
-
-
-                {{/*<% if @user.client_jurisdictions.any?{ |cj| cj.hide_manage_subscriptions == false and cj.stop_granularity == false } %>*/}}
-                {{/*<a id="add-stop-button" href="/setup" style="font-size: 18pt; font-weight: bold; color: #A12130;">*/}}
-                    {{/*<%= t('add_a_bus_stop', locale: current_locale) %>*/}}
-                {{/*</a>*/}}
-                {{/*<% end %>*/}}
-
-
-                {{/*<% else %>*/}}
-                {{/*<a id="add-stop-button" href="/setup" style="font-size: 18pt; font-weight: bold; color: #A12130;">*/}}
-                    {{/*<%= t('add_a_bus_stop', locale: current_locale) %>*/}}
-                {{/*</a>*/}}
-                {{/*<% end %>*/}}
-
-                {{/*<% end %>*/}}
-            {{/*</td>*/}}
-            {{/*<td style="vertical-align: middle; border-left:1px solid #ccc; height: 56px; width:56px; text-align: center;" align="center">*/}}
-                {{/*<a href="/account"><i style="font-size: 30pt; color: #A12130;" class="ss ss-settings account" aria-hidden="true"></i></a>*/}}
-            {{/*</td>*/}}
-        {{/*</tr>*/}}
+            <td id="bottom-bar-center-td" style="vertical-align: middle;
+            height: 56px;
+            text-align: center;
+            /*<% if request.fullpath.starts_with?('/map_view') %>*/
+            /*cursor: pointer;*/
+            /*<% end %>*/
+            background: #ffffff;"
+            data-toggle="collapse"
+            data-target="#run-data"
+            align="center">
 
         {{/*<% if request.fullpath.starts_with?('/map_view') %>*/}}
-        {{/*<tr>*/}}
+
+            {{/*<div class="container-fluid" style="margin:0px; padding: 0px;">*/}}
+            {{/*<div class="row">*/}}
+            {{/*<div class="col-xs-12" align="center" style="padding:0px;">*/}}
+            {{/*<div style="display: inline-block" align="left">*/}}
+            {{/*<table cellpadding="0">*/}}
+            {{/*<tr class="scheduled-data">*/}}
+            {{/*<td id="bottom-bar-scheduled" style="font-size: 15pt;"></td>*/}}
+            {{/*</tr>*/}}
+            {{/*<tr class="expected-data">*/}}
+            {{/*<td class="expected" style="font-size: 15pt;"></td>*/}}
+            {{/*</tr>*/}}
+            {{/*<tr class="expected-data">*/}}
+            {{/*<td id="bottom-bar-as-of" class="as_of" align="center" style="padding: 0px;"></td>*/}}
+            {{/*</tr>*/}}
+            {{/*<tr>*/}}
+            {{/*<td style="font-size: 8pt;" align="center">*/}}
+            {{/*<i class="fa fa-chevron-down"  style="padding:0px;" aria-hidden="true"></i>*/}}
+            {{/*</td>*/}}
+            {{/*</tr>*/}}
+            {{/*</table>*/}}
+            {{/*</div>*/}}
+            {{/*</div>*/}}
+            {{/*</div>*/}}
+            {{/*</div>*/}}
+
+        {{/*<% end %>*/}}
+
+        {{/*<% if  request.fullpath.include?('/my_stops') || request.fullpath == '/web' %>*/}}
+
+            {{/*<% if [Sti::LICENSE_5, Sti::SUB_ACCOUNT_USER].include?(@user.client_permission_group) %>*/}}
+                {{/*<% if @user.client_jurisdictions.any?{ |cj| cj.hide_manage_subscriptions == false and cj.stop_granularity == false } %>*/}}
+                    {{/*<a id="add-stop-button" href="/setup" style="font-size: 18pt; font-weight: bold; color: #A12130;">*/}}
+                    {{/*<%= t('add_a_bus_stop', locale: current_locale) %>*/}}
+                    {{/*</a>*/}}
+                {{/*<% end %>*/}}
+            {{/*<% else %>*/}}
+                {{/*<a id="add-stop-button" href="/setup" style="font-size: 18pt; font-weight: bold; color: #A12130;">*/}}
+                {{/*<%= t('add_a_bus_stop', locale: current_locale) %>*/}}
+                {{/*</a>*/}}
+            {{/*<% end %>*/}}
+
+        {{/*<% end %>*/}}
+            </td>
+
+            <td style="vertical-align: middle; border-left:1px solid #ccc; height: 56px; width:56px; text-align: center;" align="center">
+                <a href="/account"><i style="font-size: 30pt; color: #A12130;" class="ss ss-settings account" aria-hidden="true"></i></a>
+            </td>
+        </tr>
+
+        {{/*<% if request.fullpath.starts_with?('/map_view') %>*/}}
+            {{/*<tr>*/}}
             {{/*<td colspan="3" id="map-view-info" style="background:#ffffff; border-top:1px solid #ccc;" align="center">*/}}
 
 
             {{/*</td>*/}}
-        {{/*</tr>*/}}
+            {{/*</tr>*/}}
         {{/*<% end %>*/}}
 
-    {{/*</table>*/}}
-{{/*</div>*/}}
+    </table>
+</div>
 
 
-{{/*</body>*/}}
-{{/*</html>*/}}
+</body>
+</html>
+{{end}}
+
+
+
 
 {{/*<script type="text/javascript">*/}}
 
