font awesome fixed.

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -40,8 +40,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     {{/*<!-- FontAwesome -->*/}}
-    <script src="//use.fontawesome.com/6e2d4f5c12.js"></script>
-    <script defer src="/javascript/fontawesome/fontawesome-all.js"></script>
+    <script src="https://use.fortawesome.com/2b5ad341.js"></script>
+    {{/*<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-xyMU7RufUdPGVOZRrc2z2nRWVWBONzqa0NFctWglHmt5q5ukL22+lvHAqhqsIm3h" crossorigin="anonymous">*/}}
+    {{/*<script defer src="/javascript/fontawesome/fontawesome-all.js"></script>*/}}
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     {{/*<!-- Bootstrap DateTimePicker & Moment.js -->*/}}
