--- a/views/layouts/app.html
+++ b/views/layouts/app.html
@@ -138,7 +138,7 @@ z-index: 5000;">
         <tr>
             <td style="vertical-align: middle; border-right:1px solid #ccc; height: 56px; width:56px;" align="center">
             <i class="ss ss-logo"  style="font-size: 30pt; color: #A12130;" aria-hidden="true"></i>
-            <img src="/images/safestop-icon-512.png" alt="SafeStop" style="height:40px;">
+            {{/*<img src="/images/safestop-icon-512.png" alt="SafeStop" style="height:40px;">*/}}
             </td>
 
             <td id="bottom-bar-center-td" style="vertical-align: middle;
