--- a/views/AuthController/register.html
+++ b/views/AuthController/register.html
@@ -7,92 +7,144 @@
 <title></title>
 {{end}}
 {{define "body"}}
-<div class="container-fluid" id="login-panel">
-    <div class="row">
-        <div class="col text-center">
-            <form action="/register" method="POST">
 
-                <div class="form-group">
-                    <label  for="input-email">Email</label>
-                    <input class="form-control" type="text" name="email" id="input-email" placeholder="Enter a valid email address">
+
+
+<form method="post" action="/register/{{ .ViewData.JurisdictionId}}">
+    <input type="hidden" name="postal_code" value="<%= @postal_code %>">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12">
+                <div align="center">
+                    <img style="height: 44px;" id="logo" src="/images/safe_stop_logo.png">
                 </div>
-
-                <div class="form-group">
-                    <label  for="input-first-name">First Name</label>
-                    <input class="form-control" type="text" name="first-name" id="input-first-name" placeholder="Enter your first name">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="lead" align="center">
+                {{ t .CurrentLocale "account_creation" "" }}
                 </div>
-
+            </div>
+        </div>
+        <div  class="row">
+            <div class="col-sm-12">
                 <div class="form-group">
-                    <label  for="input-last-name">Last Name</label>
-                    <input class="form-control" type="text" name="last-name" id="input-last-name" placeholder="Enter your last name">
+                    <input class="form-control" name="user[email]" type="text" placeholder="{{ t .CurrentLocale "email" "" }}" value="{{ .ViewData.Email }}">
                 </div>
-
                 <div class="form-group">
-                    <label  for="input-dob">Date of Birth</label>
-                    <input class="form-control" type="text" name="dob" id="input-dob" placeholder="Enter your date of birth (2006-01-02)">
+                    <input class="form-control" name="ec" type="text" placeholder="{{ t .CurrentLocale "confirm_email" "" }}">
                 </div>
-
                 <div class="form-group">
-                    <label for="input-password">Password</label>
-                    <input class="form-control" type="password" name="password" id="input-password" placeholder="Enter password">
+                    <input class="form-control" name="user[password]" type="password" placeholder="{{ t .CurrentLocale "password" "" }}">
                 </div>
-
                 <div class="form-group">
-                    <label for="input-password-confirm">Confirm Password</label>
-                    <input class="form-control" type="password" name="password-confirm" id="input-password-confirm" placeholder="Enter password">
+                    <input class="form-control" name="user[password_confirmation]" type="password" placeholder="{{ t .CurrentLocale "confirm_password" "" }}">
                 </div>
-
                 <div class="form-group">
-                    <label  for="input-mobile-phone-number">Mobile Phone Number</label>
-                    <input class="form-control" type="text" name="mobile-phone-number" id="input-mobile-phone-number" placeholder="Enter your mobile phone number including area code (5555555555)">
+                    <input class="form-control" name="person[first_name]" type="text" placeholder="{{ t .CurrentLocale "first_name" "" }}" value="{{ .ViewData.FirstName }}">
                 </div>
-
                 <div class="form-group">
-                    <label  for="input-gender">Gender</label>
-                    <select class="form-control" name="gender" id="input-gender">
-                    {{ range .ViewData.Genders }}
-                        <option>{{.}}</option>
-                    {{ end }}
-                    </select>
+                    <input class="form-control" name="person[last_name]" type="text" placeholder="{{ t .CurrentLocale "last_name" "" }}" value="{{ .ViewData.LastName }}">
                 </div>
-
                 <div class="form-group">
-                    <label  for="input-orientation">Orientation</label>
-                    <select class="form-control" name="orientation" id="input-orientation">
-                    {{ range .ViewData.Orientations }}
-                        <option>{{.}}</option>
-                    {{ end }}
-                    </select>
+                    <div class="checkbox">
+                        <label><input type="checkbox"
+                                      id="terms-conditions-check"
+                                      name="terms_and_policy[]"
+                        >{{ t .CurrentLocale "ss_activate_eula_privacy_policy" "" }}</label>
+                    </div>
                 </div>
-
                 <div class="form-group">
-                    <label  for="input-country-id">Country</label>
-                    <select class="form-control" name="country-id" id="input-country-id">
-                    {{ range .ViewData.Countries }}
-                        <option value="{{.Id}}" {{ if eq "United States" .Name }}selected{{end}}>{{.Name}}</option>
-                    {{ end }}
-                    </select>
+                    <table style="width: 100%;">
+                        <tr>
+                            <td style="width: 50%;">
+                                <a href="/login" class="btn btn-default btn-block no-right-radius">{{ t .CurrentLocale "cancel" "" }}</a>
+                            </td>
+                            <td style="width: 50%;">
+                                <button class="btn btn-safe-stop btn-block no-left-radius" type="submit">{{ t .CurrentLocale "register" "" }}</button>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-
-
-
-                <button type="submit" class="btn btn-outline-secondary btn-sm">Register</button>
-            </form>
+            </div>
         </div>
     </div>
+</form>
 
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/login">Already a member? Login</a>
-        </div>
-    </div>
+<script type="text/javascript">
 
-    <div class="row" style="padding-top: 20px;">
-        <div class="col text-center">
-            <a class="btn btn-outline-secondary btn-sm" href="/">Return to home</a>
-        </div>
-    </div>
-</div>
+    $(document).ready(function(){
+        var screen_height = window.innerHeight;
+        var form_height = $("form").height();
+        $("form").css('margin-top', ((screen_height / 2) - (form_height / 1.5)) + 'px');
+
+        $('form').formValidation({
+            framework: 'bootstrap',
+            feedbackIcons: {
+                valid: 'glyphicon glyphicon-ok',
+                invalid: 'glyphicon glyphicon-remove',
+                validating: 'glyphicon glyphicon-refresh'
+            },
+            fields: {
+                'person[first_name]': {validators: {notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'}}},
+                'person[last_name]': {validators: {notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'}}},
+                'user[email]': {
+                    validators: {
+                        regexp: {
+                            regexp: /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+                            message: '{{ t .CurrentLocale "invalid_email_format" "" }}'
+                        },
+                        notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
+                        identical: {field: 'ec', message: '{{ t .CurrentLocale "email_addresses_do_not_match" "" }}'},
+                        remote: {
+                            message: '{{ t .CurrentLocale "email_address_already_in_use" "" }}',
+                            url: '/user_exists',
+                            type: 'GET',
+                            delay: 100
+                        }
+                    }
+                },
+                'ec': {
+                    validators: {
+                        notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
+                        identical: {field: 'user[email]', message: '{{ t .CurrentLocale "email_addresses_do_not_match" "" }}'}
+                    }
+                },
+                'user[password]': {
+                    validators: {
+                        notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
+                        regexp: {
+                            regexp: /^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9!@#$%^&*]{6,16}$/,
+                            message: '{{ t .CurrentLocale "invalid_password_format" "" }}'
+                        },
+                        identical: {field: 'user[password_confirm]', message: '{{ t .CurrentLocale "passwords_do_not_match" "" }}'}
+                    }
+                },
+                'user[password_confirmation]': {
+                    validators: {
+                        notEmpty: {message: 'Please confirm your password'},
+                        identical: {field: 'user[password]', message: '{{ t .CurrentLocale "passwords_do_not_match" "" }}'}
+                    }
+                },
+                'terms_and_policy[]': {
+                    validators: {
+                        choice: {
+                            min: 1,
+                            max: 1,
+                            message: '{{ t .CurrentLocale "must_agree_to_terms_and_policy" "" }}'
+                        }
+                    }
+                }
+            }
+        });
+    });
+
+</script>
+
+
+
 
 
 {{end}}
