--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -7,6 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta charset="UTF-8"/>
 
+    <link rel="stylesheet" href="/stylesheets/app.css">
+
+
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/images/favicomatic/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/favicomatic/apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/favicomatic/apple-touch-icon-72x72.png" />
@@ -31,13 +34,21 @@
 
     {{/*<!-- JQuery -->*/}}
     <script crossorigin='anonymous' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
+
     {{/*<!-- Bootstrap -->*/}}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    {{/*<!-- Mustche-->*/}}
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+
     {{/*<!-- FontAwesome -->*/}}
-    <script src="//use.fontawesome.com/6e2d4f5c12.js"></script>
-    <script defer src="/javascript/fontawesome/fontawesome-all.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    {{/*<script src="//use.fontawesome.com/6e2d4f5c12.js"></script>*/}}
+    {{/*<script defer src="/javascript/fontawesome/fontawesome-all.js"></script>*/}}
+
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     {{/*<!-- Bootstrap DateTimePicker & Moment.js -->*/}}
     <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css' rel='stylesheet'>
@@ -50,9 +61,22 @@
     {{/*<!-- Sweet Alert 2 -->*/}}
     <script src="//cdn.jsdelivr.net/sweetalert2/6.4.4/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/sweetalert2/6.4.4/sweetalert2.min.css">
+
+
+    {{/*<!-- FormValidation -->*/}}
+    <link rel="stylesheet" href="/stylesheets/formValidation.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
+    <script defer src="/javascript/FormValidation.min.js"></script>
+    <script defer src="/javascript/Bootstrap.min.js"></script>
+
+
+
+
+
     {{/*<!-- Stay Standalone -->*/}}
     {{/*<script type="text/javascript">(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(chref=d.href).replace(e.href,"").indexOf("#")&&(!/^[a-z\+\.\-]+:/i.test(chref)||chref.indexOf(e.protocol+"//"+e.host)===0)&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone");</script>*/}}
     <script type="text/javascript">
+
         function escapeRegExp(string){
             return string.replace(/([.*+?^${}()|\[\]\/\\])/g, "\\$1");
         }
